# rio_config

./: .gitignore  README.md  config.smpx  config.v1  config2.smpx  f1.flx  f2.flx  f3.flx  file1.flx  file1.fml  file2.flx  file2.fml  file3.flx  p2.jaml  p2.py  process.py  pyproject.toml  run.py  run2.py  sample.fml  sample2.fml  sample3.fml  test.py  test2.py
flex_markup/: ForLoop__init__.py  __init__.py  __init__2.py  functions.py
fml/: __init__.py  functions.py  init.py
rio_config/: __init__.py  functions.py
rio_config.egg-info/: PKG-INFO  SOURCES.txt
tests/: all_tests.rio  data.flx  data2.flx  run_tests.py  sample.py  sample.rio  test26.rio
